Ping mvc spock test functiona